Version 0.1.4
- CredentialsList is absorbed by Credentials. Credentials now allows for
arguments being vectors and automagically returns a CredentialsList if
appropriate.
- sendQuery has a new argument applyFun to supply an optional parallel version
of mclapply.

Version 0.1.3
- sendQuery can now perform multiple requests on one connection, i.e. vectorized
for query
- New class CredentialsList
- New method to support CredentialsList in sendQuery

Version 0.1.2
- sendQuery is now an S4 generic
- S3Class DBCredentials is now S4Class Credentials
- SingleQuery and ArgList (Classes) for type checking

Version 0.1.1
- sendQuery can now handle MySql databases as connections