@@ -17,6 +17,22 @@
 #'   (Credentials) method, so implicitly to reTry
 #'   \cr else ignored
 #' @param applyFun (function) something like lapply or mclapply
+#' @param simplify (logical(1)) whether to simplify results. See details.
+#'
+#' @details \code{simplify} the default is to simplify results. If you send
+#'   multiple queries to one database it is tried to rbind the results - when
+#'   you have different column names this can be like a full join. If you send
+#'   one query to multiple databases it is tried to rbind the results. If you
+#'   send multiple queries to multiple databases, then first the results of the
+#'   same query are tried to be rbind, and if possible also the results of each
+#'   query. It is considered to be possible iff the names of all data frames
+#'   belonging to each query are the same.
+#'
+#' @return one in:
+#' \cr \code{simplify = TRUE} (list | data.frame)
+#' \cr \code{simplify = FALSE}: (list) with data frames or nested list of data
+#' frames
+#' \cr On error: (list) with 'try-catch' objects
 #'
 #' @include helperClass.R
 #'
@@ -56,10 +72,11 @@ sendQuery(db, query, ...) %g% {
 
 #' @rdname sendQuery
 #' @export
-sendQuery(db ~ CredentialsList, query ~ character, ..., applyFun = lapply) %m% {
+sendQuery(db ~ CredentialsList, query ~ character, ..., applyFun = lapply, simplify = TRUE) %m% {
   # db: is of class 'CredentialsList'
   # query: is probably a character
-  applyFun(db, sendQuery, query = query, ...) %>% doRbind
+  applyFun(db, sendQuery, query = query, ..., simplify = FALSE) %>%
+    { simplifyMe(simplify, doRbind)(.) }
 }
 
 
@@ -73,7 +90,7 @@ sendQuery(db ~ Credentials, query ~ character, ...) %m% {
 
 #' @rdname sendQuery
 #' @export
-sendQuery(db ~ Credentials, query ~ SingleQueryList, ...) %m% {
+sendQuery(db ~ Credentials, query ~ SingleQueryList, ..., simplify = TRUE) %m% {
   # db: is a list
   # query: is a single query
 
@@ -89,7 +106,7 @@ sendQuery(db ~ Credentials, query ~ SingleQueryList, ...) %m% {
     ...
   )
 
-  downloadedData %>% doRbind
+  downloadedData %>% { simplifyMe(simplify, doRbind)(.) }
 
 }
 
@@ -139,15 +156,64 @@ sendQuery(db ~ MySQLConnection, query ~ SingleQuery, ...) %m% {
 
 }
 
+simplifyMe <- function(simplify, fun) {
+  function(x) {
+    if (simplify) {
+      fun(x)
+    } else {
+      x
+    }
+  }
+}
+
 doRbind <- function(x) {
+  # This gets more and more complicated. Basically this is a simplify function.
+  # We need some type checking of x, thats what makes this function tricky.
+  # Helpers:
+  nestedMap <- function(fun, x) do.call(function(...) Map(fun, ...), x)
+  sapply <- function(...) unlist(lapply(...))
+
+  check <- function(x, checkFun, ...) {
+    if (class(x)[1] == "list") sapply(x, check, checkFun = checkFun, ...)
+    else checkFun(x, ...)
+  }
+
+  checkDF <- function(x) {
+    # x: list
+    # Checks if all elements are data frames
+    all(check(x, inherits, what = "data.frame"))
+  }
+
+  checkNames <- function(x) {
+    # x : list
+    # Check if all elements have same names as attribute
+    compareFun <- function(x, compare) all(compare %in% names(x))
+    all(check(x, compareFun, compare = check(x, names)))
+  }
+
+  simplifyOutput <- function(x) {
+    # x:list
+
+    # reduce to element if list has length equal to 1
+    if (length(x) == 1) return(x[[1]])
+
+    # reduce recursively if names of all dfs are equal
+    else if (checkNames(x)) return(doRbind(x))
+
+    else return(x)
+
+  }
+
   if (inherits(x[[1]], "data.frame")) x %>% bind_rows
+  else if (checkDF(x)) nestedMap(bind_rows, x) %>% simplifyOutput
   else x
+
 }
 
 fetchFirstResult <- function(res) {
   # Helper used in sendQuery methods.
   on.exit(dbClearResult(res))
-  if (!dbHasCompleted(res)) dbFetch(res, n = -1)
+  if (!dbHasCompleted(res)) dplyr::as.tbl(dbFetch(res, n = -1))
   else NULL
 }
 
