@@ -4,6 +4,7 @@ arguments being vectors and automagically returns a CredentialsList if
 appropriate.
 - sendQuery has a new argument applyFun to supply an optional parallel version
 of mclapply.
+- simplify argument to prevent sendQuery from rbind its results.
 
 Version 0.1.3
 - sendQuery can now perform multiple requests on one connection, i.e. vectorized
